--- a/index.html
+++ b/index.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Desafio - Funciones</title>
 </head>
 <body>
-    
+    <header class="d-flex justify-content-between" id="titleDiv">
+        <a href="index.html"><img id="imgLogo" src="assets/imgs/logoDesafioLatam.png" alt="logoPortafolio"></a>
+        <h1 id="titleH1">Desafio - Funciones</h1>
+        <div>
+            <a href="http://narkistudio.com" target="_blank"><i class="bi bi-globe colorIcon"></i></a>
+            <a href="https://www.linkedin.com/in/alfonso-sandoval-del-pino-7aaa361a7/" target="_blank"><i class="bi bi-linkedin colorIcon"></i></a>
+            <a href="https://github.com/OwlDeev?tab=repositories" target="_blank"><i class="bi bi-github colorIcon"></i></a>
+            
+        </div>
+    </header>
+    <div class="containerChallenge">
+        <div class="d-flex justify-content-around">
+            <div class="row row-cols-1 row-cols-md-3 g-5">
+                <div class="col">
+                  <div class="card">
+                    <img src="assets/imgs/ejercicio1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <center>
+                            <h5 class="card-title">1 - Funcion</h5>
+                        </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="assets/imgs/ejercicio2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <center>
+                            <h5 class="card-title">2 - Arrow</h5>
+                        </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="assets/imgs/ejercicio3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <center>
+                            <h5 class="card-title">3 - Pintar.html</h5>
+                        </center>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="assets/imgs/ejercicio4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <center>
+                            <h5 class="card-title">4 - Ejercicio4.html</h5>
+                        </center>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <footer>
+        <center>
+            <h4>© Copyright NarkiStudio. Todo los derechos reservados</h4>
+        </center>
+    </footer>
+    <script src="assets/js/1 funcion.js"></script>
+    <script src="assets/js/2 arrow.js"></script>
 </body>
 </html>
