c4 - incluir ejercicio 4 al index.html

--- a/index.html
+++ b/index.html
@@ -262,6 +262,14 @@
               <div class="card-body">
                 <center>
                   <h5 class="card-title">4 - Ejercicio4.html</h5>
+                  <button
+                    type="button"
+                    class="btn btn-primary"
+                    onclick="window.open('ejercicio4.html')"
+                    target="_blank"
+                  >
+                  EJERCICIO
+                  </button>
                 </center>
               </div>
             </div>
